--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.4.0",
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@types/validator": "^13.11.9",
     "dotenv": "^16.4.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
@@ -18,12 +20,17 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/zxcvbn": "^4.4.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
